--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,27 +16,27 @@
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
             android:textSize="25sp"
             android:textColor="#131312"
             android:text="@string/out_header"
             android:id="@+id/textView1"
             android:layout_gravity="center_horizontal"
-            android:layout_weight="1" />
+            android:layout_weight="2" />
 
         <ListView
-            android:layout_width="wrap_content"
-            android:layout_height="416dp"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:id="@+id/listView"
             android:layout_below="@+id/textView"
             android:layout_weight="1" />
 
         <Button
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
             android:text="New Button"
             android:id="@+id/button"
-            android:layout_weight="1" />
+            android:layout_weight="2" />
     </LinearLayout>
 
 
