Определение адаптера для списка

--- a/app/src/main/res/layout/item_student.xml
+++ b/app/src/main/res/layout/item_student.xml
@@ -1,7 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="horizontal"
+    android:layout_width="fill_parent"
+    android:layout_height="120dp"
+    android:weightSum="1">
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:id="@+id/imagePlus"
+        android:src="@drawable/plus"
+        android:layout_marginTop="30dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="65dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="70"
+        android:id="@+id/textNumber"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="20dp"
+        android:textSize="70dp"
+        android:textColor="#0b8409" />
+
+    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/student_image"
+        android:layout_width="122dp"
+        android:layout_height="match_parent"
+        app:civ_border_width="2dp"
+        app:civ_border_color="#04dc08" />
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Timon"
+            android:id="@+id/textNick"
+            android:textColor="#280303"
+            android:layout_marginTop="20dp"
+            android:textSize="30dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Artem Ivanov"
+            android:id="@+id/textFullname"
+            android:textColor="#927070"
+            android:layout_marginTop="20dp"
+            android:textSize="15dp" />
+    </LinearLayout>
 
 </LinearLayout>
