--- a/app/src/main/res/layout/item_student.xml
+++ b/app/src/main/res/layout/item_student.xml
@@ -6,11 +6,11 @@
     android:weightSum="1">
 
     <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:id="@+id/imagePlus"
         android:src="@drawable/plus"
-        android:layout_marginTop="30dp" />
+        android:layout_marginTop="39dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -25,16 +25,20 @@
 
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/student_image"
-        android:layout_width="122dp"
-        android:layout_height="match_parent"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         app:civ_border_width="2dp"
-        app:civ_border_color="#04dc08" />
+        app:civ_border_color="#070386"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp" />
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="10dp">
+        android:layout_weight="0.97">
 
         <TextView
             android:layout_width="wrap_content"
@@ -43,8 +47,10 @@
             android:text="Timon"
             android:id="@+id/textNick"
             android:textColor="#280303"
-            android:layout_marginTop="20dp"
-            android:textSize="30dp" />
+            android:layout_marginTop="38dp"
+            android:textSize="20dp"
+            android:layout_marginLeft="5dp"
+            android:layout_gravity="center_horizontal" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -53,8 +59,10 @@
             android:text="Artem Ivanov"
             android:id="@+id/textFullname"
             android:textColor="#927070"
-            android:layout_marginTop="20dp"
-            android:textSize="15dp" />
+            android:layout_marginTop="5dp"
+            android:textSize="15dp"
+            android:layout_marginLeft="5dp"
+            android:layout_gravity="center_horizontal" />
     </LinearLayout>
 
 </LinearLayout>
