--- a/app/src/main/res/layout/item_student.xml
+++ b/app/src/main/res/layout/item_student.xml
@@ -6,22 +6,23 @@
     android:weightSum="1">
 
     <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:id="@+id/imagePlus"
         android:src="@drawable/plus"
-        android:layout_marginTop="39dp" />
+        android:layout_gravity="center_vertical" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="65dp"
+        android:layout_width="40dp"
+        android:layout_height="37dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="70"
         android:id="@+id/textNumber"
         android:layout_marginLeft="0dp"
-        android:layout_marginTop="30dp"
-        android:textSize="50dp"
-        android:textColor="#0b8409" />
+        android:textSize="30dp"
+        android:textColor="#0b8409"
+        android:textStyle="bold"
+        android:layout_gravity="center_vertical" />
 
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/student_image"
@@ -47,10 +48,10 @@
             android:text="Timon"
             android:id="@+id/textNick"
             android:textColor="#280303"
-            android:layout_marginTop="38dp"
-            android:textSize="20dp"
+            android:layout_marginTop="30dp"
+            android:textSize="15dp"
             android:layout_marginLeft="5dp"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="top|left|bottom|center_vertical" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -59,10 +60,10 @@
             android:text="Artem Ivanov"
             android:id="@+id/textFullname"
             android:textColor="#927070"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="2dp"
             android:textSize="15dp"
             android:layout_marginLeft="5dp"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="top|left|bottom|center_vertical" />
     </LinearLayout>
 
 </LinearLayout>
