--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,10 +15,11 @@
         android:layout_height="match_parent">
 
         <ListView
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:id="@+id/listView"
             android:layout_below="@+id/textView"
+            android:focusable="false"
             android:layout_weight="1" />
 
         <Button
