Создание нового элем.списка через EditActivity

--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -45,7 +45,8 @@
             <ImageView
                 android:layout_width="170dp"
                 android:layout_height="match_parent"
-                android:id="@+id/imageView" />
+                android:src="@drawable/No_avatar"
+                android:id="@+id/imageViewEdit" />
         </LinearLayout>
 
         <LinearLayout
