Исправление ошибки с Switches: Перепутаны булевские значения Неподходящее название для drawable

--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -45,7 +45,7 @@
             <ImageView
                 android:layout_width="170dp"
                 android:layout_height="match_parent"
-                android:src="@drawable/No_avatar"
+                android:src="@drawable/no_avatar"
                 android:id="@+id/imageViewEdit" />
         </LinearLayout>
 
